CSS fix for wrapping button text in some situations

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -12,6 +12,7 @@
   display: inline-block;
   border: 1px solid $color-primary;
   border-radius: $design-border-radius-default;
+  white-space: nowrap;
   cursor: pointer;
 
   &--primary {
